# atest

./: 404.html  README.md  index.html  install.html  mkdocs.yml  pyproject.toml  sitemap.xml  usage.html
.github/workflows/: ci.yml  documentation.yml  publish-to-test-pypi.yml
docs/: README.md  about.md  install.md  usage.md
search/: search_index.json
ztest/: __init__.py  utils.py
ztest/scripts/: __init__.py  zsum.py
