# SPDX-FileCopyrightText: 2025 Idiap Research Institute <contact@idiap.ch>
# SPDX-FileContributor: Olivier Canévet <olivier.canevet@idiap.ch>
# SPDX-License-Identifier: See LICENSE file

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztest"
description = "A test package to test GitHub Actions"
version = "0.0.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Olivier Canévet", email = "olivier.canevet@idiap.ch"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Operating System :: Unix",
]
requires-python = ">= 3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["ztest", "ztest.scripts"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
zsum = "ztest.scripts.zsum:main"
